--- a/Web Dev - Django/style.css
+++ b/Web Dev - Django/style.css
@@ -1,13 +1,152 @@
 body {
     background-color: lightblue;
+    color: black;
+    font-size: 15px;
+    line-height: 1.64;
+    color: #434242;
+    font-family: 'Open Sans', sans-serif !important;
+    height: 100%;
 }
 
-h1 {
-    color: red;
+body {
+    background: #F3EFE0;
+    font-size: 15px;
+    line-height: 1.64;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+strong,
+b {
+    font-family: 'Open Sans', sans-serif !important;
+    margin-bottom: 20px;
+}
+
+h1,
+h4 {
+    font-weight: 700;
+    margin-bottom: 10px;
     text-align: center;
 }
 
-p {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
+h1 {
+    color: #22A39F;
+    text-align: center;
+    text-align: center;
 }
+
+h2,
+h3 {
+    font-weight: 300;
+    color: #22A39F;
+}
+
+h2 {
+    font-size: 54px;
+    text-align: center;
+}
+
+h3 {
+    font-size: 28px;
+}
+
+p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif, arial;
+    font-size: 12px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    background-color: #45a1ff;
+    color: #fff;
+}
+
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+#content-wrap {
+    padding-bottom: 2.5rem;
+    /* Footer height */
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    /* Footer height */
+}
+
+table {
+    text-align: left;
+}
+
+input[type=submit] {
+    background-color: #22A39F;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #22A39F;
+}
+
+input[type=reset] {
+    background-color: #22A39F;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+input[type=reset]:hover {
+    background-color: #22A39F;
+}
+
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    float: none;
+}
+
+
+/* Style the links inside the navigation bar */
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+}
+
+
+/* Change the color of links on hover */
+
+.topnav a:hover {
+    background-color: #22A39F;
+    color: black;
+}
+
+
+/* Add a color to the active/current link */
+
+.topnav a.active {}
